[package]
name = "set_game"
version = "0.1.0"
authors = ["Eric Williamson <ewilliamson@fb.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strum = "0.17.1"
strum_macros = "0.17.1"
rand = "0.7.3"
itertools = "0.8.2"
rayon = "1.3.0"
histogram = "0.6.9"
